--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  color: gray;
 }
 
 .card--profile .filter-options {
