--- a/style.css
+++ b/style.css
@@ -50,9 +50,8 @@ body {
   border-radius: 10px;
 }
 
-.card--profile {
-  background-color: var(--purple500);
-}
+/* .card--profile {
+} */
 
 .card--profile .user {
   display: flex;
@@ -99,6 +98,10 @@ ul {
   flex-direction: row;
   justify-content: space-evenly;
   color: gray;
+}
+
+li:hover {
+  cursor: pointer;
 }
 
 .card--profile .filter-options {
@@ -184,6 +187,7 @@ ul {
 .hours .last {
   font-size: 0.7em;
   font-weight: var(--light);
+  color: gray;
 }
 
 @media (min-width: 1024px) {
@@ -192,15 +196,47 @@ ul {
     max-width: 1200px;
   }
 
-  /* .container .content {
+  .container .content {
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(4, 1fr);
+  }
+
+  .card--profile {
+    grid-area: 1 / 1 / 3 / 1;
+  }
+
+  .card-content .hours {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .hours .total {
+    font-size: 2.8em;
+  }
+
+  .card--profile .user {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5em;
+  }
+
+  .card--profile .user .user-details {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    padding: 2em;
-  } */
+    padding-left: 0;
+  }
 
-  .content {
-    display: grid;
-    grid-template: repeat(); 
+  .card--profile .user .user-details .name {
+    font-size: 2em;
+  }
+
+  ul {
+    flex-direction: column;
+    gap: 1em;
+  }
+
+  .card--profile .user img {
+    width: 80px;
+    height: 80px;
   }
 }
